# KnowledgeForestPoC

./: .gitignore  Architecture.md  Makefile  PoC.jsx  index.html  memoria_research.md  naluat_neo.csv  naluat_neo.json  package-lock.json  package.json
docs/: how-it-works.md
pipeline/: .env.example  pyproject.toml
pipeline/pipeline/: access.py  client.py  config.py  connector_state.py  crm_sync.py  errors.py  event_sync.py  ingestion_rejections.py  main.py  models.py  router.py  supabase_rest.py
pipeline/pipeline/adapters/: affinidad.py  base.py  calendar.py  calendar_entities.py  conversation.py  document.py  email_entities.py  gmail.py  naluat.py  notes.py  notes_entities.py  sharepoint.py  sharepoint_skeleton.py  structured.py  web.py
pipeline/pipeline/api/: ingest.py
pipeline/pipeline/mcp_server/: __init__.py  _runtime.py  auth.py  instance.py  oauth_provider.py  runner.py  server.py  storage.py  supabase_oauth.py  tenant_map.py
pipeline/tests/: conftest.py  test_access.py  test_client.py  test_crm_sync.py  test_event_sync.py  test_ingestion_rejections.py  test_mcp_server.py  test_router.py  test_stress.py  test_supabase_rest.py
pipeline/tests/test_adapters/: test_affinidad.py  test_calendar.py  test_calendar_entities.py  test_calendar_ingest.py  test_conversation.py  test_document.py  test_email_entities.py  test_email_extraction.py  test_gmail.py  test_gmail_attachments.py  test_gmail_connectivity.py  test_gmail_live.py  test_gmail_messages.py  test_notes.py  test_notes_entities.py  test_notes_ingest.py  test_structured.py  test_web.py
src/: App.css  (+1 more)
(+214 files in other folders)
