[project]
name = "knowledgeforest-pipeline"
version = "0.1.0"
description = "Ingestion pipeline for KnowledgeForest — normalizes heterogeneous sources and routes to Supabase Edge Functions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.9",
    "google-auth[requests]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
